# HRK

./: .gitignore  CHANGES.md  CLAUDE.md  PRZEGLĄD_PROJEKTU.md  README.md  REPORTS-PLAN.md  verify_changes.py
.github/: copilot-instructions.md
TODO/: FEEDBACK_ANALIZA_I_PLAN.md  P0_KRYTYCZNE.md  P1_WAZNE.md  P2_NICE_TO_HAVE.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  crm-simga-team-baza-backup.sql  db_dump.py  docker-compose.yml  pyproject.toml  test_s3.py
backend/AD/: Dockerfile
backend/AD/app/controllers/: ad_controller.py
backend/AD/app/models/: app_info.py
backend/AD/app/services/: ad_service.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0a1b2c3d4e5f_add_user_role_and_company_access.py  1b2c3d4e5f6a_simplify_users_to_login_email.py  2d4e6f8a9b0c_add_user_roles_and_contract_scope.py  40a1f8a0d4a7_add_company_id_to_attachments.py  5af0b6c91dfa_add_custom_data_tables.py  __init__.py  a1b2c3d4e5f6_add_email_index_to_contact_persons.py  a2b3c4d5e6f7_merge_gus_cpi_and_primary_document_heads.py  b1c2d3e4f5a6_add_user_department.py  b8c9d0e1f2a3_add_include_in_ai_assistant_to_attachments.py  b9813a3347a3_merge_multiple_heads.py  c1d2e3f4a5b6_add_deadline_and_resolved_to_notes.py  c3f8e2a1b0d9_normalize_enum_values_to_lowercase.py  d2e3f4a5b6c7_add_price_list_templates.py  d4e9f2a1c7b8_add_gus_cpi_snapshots.py  d7e2c1f4a9b3_add_document_generations.py  dda74663e6ba_feat_initial_crm_schema_mvp_alf_39.py  e1f2a3b4c5d6_add_gus_cpi_snapshots.py  e3f4a5b6c7d8_merge_custom_data_and_price_list_heads.py  f3a9b2c1d8e4_add_primary_document_to_contracts.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  app.py  config.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/postman/: CRUD.json  HRK-Activity-Log.postman_collection.json  HRK-E2E-Deterministic-Full.postman_collection.json  HRK-E2E-Deterministic.postman_collection.json  HRK-S3.postman_collection.json
backend/schema_manager/controllers/: crud_controller.py  schema_manager_controller.py
backend/schema_manager/models/: __init__.py  schema_models.py
backend/schema_manager/service/: __init__.py  crud_service.py
backend/services/ad/: .env.example  Dockerfile  README.md
backend/services/ad/app/: main.py
backend/services/ad/app/models/: ad_user.py  whoami.py
backend/services/ad/app/services/: ad_service.py
backend/services/reranker/: Dockerfile  requirements.txt
backend/services/reranker/app/: main.py
backend/services/schema_manager/: Dockerfile  requirements.txt
backend/services/schema_manager/app/: main.py
backend/services/schema_manager/app/controllers/: __init__.py  crud_controller.py  schema_manager_controller.py
backend/services/schema_manager/app/service/: crud_service.py  schema_manager_service.py
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/api/: __init__.py  activity.py  contact_persons.py  contracts.py  crm.py  customer_rates.py  customers.py  deps.py  notes.py  router.py  service_groups.py  services.py  valorizations.py
backend/src/app/api/v1/: __init__.py  access.py  alerts.py  auth.py  companies.py  custom_fields.py  custom_tables.py  customers.py  dashboard.py  document_generations.py  documents.py  gus.py  price_list.py  rag.py  reports.py  users.py
backend/src/app/core/: __init__.py  auth.py  database.py  exceptions.py  storage.py  websockets.py
backend/src/app/models/: __init__.py  activity.py  alert.py  attachment.py  audit.py  base.py  company.py  contract.py  contract_service.py  custom_data.py  customer.py  document.py  document_chunk.py  document_generation.py  enums.py  gus.py  note.py  price_list.py  rate.py  score.py  service.py  service_group.py  user.py  user_company_access.py  user_contract_access.py  user_role.py
backend/src/app/repo/: __init__.py  activity.py  attachment.py  base.py  company.py  contact_persons.py  contract.py  contract_services.py  contracts.py  crm.py  custom_data.py  customer.py  customer_rates.py  customers.py  document_chunk.py  document_generation.py  gus.py  lookups.py  notes.py  price_list.py  service_groups.py  services.py  timeline.py  user.py  valorizations.py
backend/src/app/schemas/: __init__.py  access.py  activity.py  ad.py  alert.py  common.py  company.py  contact_person.py  contract.py  contract_services.py  contracts.py  crm.py  custom_data.py  customer.py  customer_rates.py  customers.py  dashboard.py  document.py  document_generation.py  gus.py  notes.py  price_list.py  rag.py  rate.py  service.py  service_groups.py  services.py  timeline.py  user.py  valorizations.py
backend/src/app/scripts/: seed_demo.py
backend/src/app/service/: __init__.py  ad_login.py  ai_summary.py  alert.py  contact_persons.py  contract_services.py  contracts.py  crm.py  custom_data.py  customer_rates.py  customers.py  document.py  document_processing.py  embedding.py  facade.py  gus.py  llm.py  notes.py  rag.py  reports.py  reranker_client.py  schema_manager_client.py  service_groups.py  services.py  storage.py  timeline.py  valorizations.py
backend/src/app/service/document_generation/: __init__.py  pdf.py  service.py  simulator.py  templates.py
backend/src/app/templates/documents/_shared/: base.html.j2
backend/src/app/templates/documents/amendment_valorization/: manifest.yml  v1.html.j2
backend/src/app/templates/documents/cover_letter/: v1.html.j2
backend/src/app/utils/: s3_client.py
backend/tests/: conftest.py  test_activity_log_api.py  test_alert_service.py  test_alerts_api.py  test_api_v1.py  test_crm_api.py  test_custom_fields.py  test_custom_tables.py  test_document_generation_accept.py  test_documents_integration.py  test_health.py  test_notes_api.py  test_rag_service.py  test_rbac_abac.py  test_rbac_abac_matrix.py  test_reports_api.py  test_schema_manager_client.py  test_timeline_service.py
docs/: README.md  ad-auth-design.md  alf-60-rbac-abac.md  glossary.md  (+6 more)
(+119 files in other folders)
