[tool.poetry]
name = "hrk-backend"
version = "0.1.0"
description = "HRK Backend - Python FastAPI application"
authors = ["AlfaTeam <team@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.11.0"
pydantic-settings = "^2.8.0"
sqlalchemy = "^2.0.0"
alembic = "^1.15.0"
asyncpg = "^0.30.0"
pgvector = "^0.4.1"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.1.0"
ruff = "^0.11.0"
mypy = "^1.15.0"
bandit = "^1.8.0"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
